# Visual-Data-Transfer

./: .gitignore  Architecture.md  CMakeLists.txt  CONTRIBUTING.md  Development.md  Getting-Started.md  Home.md  LICENSE  Package.swift  Publishing-the-Wiki.md  Python-Tools.md  README.md  Roadmap-and-Status.md  _Sidebar.md
core/: CMakeLists.txt
core/ffi/: README.md
core/ffi/include/vdt/: capi.h
core/include/vdt/: capi.h
core/include/vdt/common/: bit_packing.hpp  crc16.hpp  crc32.hpp  types.hpp
core/include/vdt/decode/: frame_decoder.hpp  session_assembler.hpp
core/include/vdt/encode/: frame_encoder.hpp  session_chunker.hpp  symbol_mapping.hpp  transfer_loop.hpp
core/include/vdt/protocol/: constants.hpp  descriptor.hpp  frame.hpp  packet.hpp  session.hpp
core/include/vdt/render/: layout.hpp
core/include/vdt/vision/: grid_sampler.hpp  homography.hpp  interfaces.hpp  marker_detector.hpp
core/src/: capi.cpp
core/src/common/: bit_packing.cpp  crc16.cpp  crc32.cpp
core/src/decode/: frame_decoder.cpp  session_assembler.cpp
core/src/encode/: frame_encoder.cpp  session_chunker.cpp  transfer_loop.cpp
core/src/protocol/: descriptor.cpp  frame.cpp  packet.cpp  session.cpp
core/src/render/: layout.cpp
core/src/vision/: grid_sampler.cpp  homography.cpp  marker_detector.cpp
core/tests/: test_crc16.cpp  test_crc32.cpp  test_encode_decode.cpp  test_frame_parse.cpp  test_symbol_mapping.cpp  test_transfer_loop.cpp
docs/: architecture.md  constraints.md  frame-layout.md  performance-baseline.md  phases-and-tasks.md  protocol-v1.md  roadmap.md  (+1 more)
(+41 files in other folders)
